--- a/docs/개발프로그레스-홈화면구현완료.md
+++ b/docs/개발프로그레스-홈화면구현완료.md
@@ -269,7 +269,7 @@ npm run dev
 
 ```bash
 # 프로젝트 디렉토리로 이동
-cd /Users/dayeon/Workspace/github/jar.am
+cd <project-root>
 
 # 의존성 설치 (최초 1회)
 npm install
